@@ -2,8 +2,9 @@
 <BOUCLE_champs(FORMS_CHAMPS){id_form}{tout}{champ}>
 <B_choix>
 [(#EXTRA_INFO|=={liste}|?{' ',''})
-<select name='#ENV{name,#CHAMP}' id='input-#ID_FORM-#CHAMP' 
-	class='[(#ENV{crayon_active,''}) ][(#OBLIGATOIRE|=={oui}|?{fondl,fondo})]'>
+<select name="#ENV{name,#CHAMP}" id="input-#ID_FORM-#CHAMP"
+	class="[(#ENV{crayon_active,''}) ][(#OBLIGATOIRE|=={oui}|?{fondl,fondo})]"
+	[title="(#TITRE)"]>
 	<option value=''>#ENV{titre_select,''}</option>]
 [(#EXTRA_INFO|=={liste}|?{'',' '})<ul class='spip_form_choix_unique[ (#ENV{crayon_active,''})]'>]
 	<BOUCLE_choix(FORMS_CHAMPS_CHOIX){id_form}{champ}{par rang}>
