@@ -1,5 +1,5 @@
 <paquet 
-	version="0.5.4"
+	version="0.5.5"
 	prefix="forms"
 	categorie="outil"
 	etat="stable"
